<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RestaurantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/ordenar"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_ordenar"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/pra_retirar"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_pra_retirar"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_entrega_gratis"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_entrega_gratis"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/vale_refeicao"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_vale_refeicao"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/distancia"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_distancia"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/entrega_parceria"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_entrega_parceira"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/super_restaurante"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_super_restaurante"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filtros"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_chip_choice"
                    android:text="@string/chip_filtros"
                    app:chipIconEnabled="true" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_banners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:paddingHorizontal="6dp" />

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <!--<com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:iss_auto_cycle="true"
            app:iss_period="5000"
            app:iss_delay="0"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/famous"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/see_more"
                android:textColor="@color/red" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_shops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:paddingHorizontal="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="10dp"
            android:text="@string/shops"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_more_shops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:paddingHorizontal="6dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>